# My_Final_Project

./: CMakeLists.txt  README.md  gits
cmake/: CUDA.cmake  GLUT.cmake  OpenGL.cmake  Qt.cmake
data/: README
data/bucky/: bukcy.hdr  bukcy.hdr~
fftw/: CMakeLists.txt  fftw_main.cpp
fftw_threads/: .directory  CMakeLists.txt  fftw_main.cpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/VolumeSlicer/: CMakeLists.txt  VolumeSlicer.cpp  VolumeSlicerWindow.cpp  VolumeSlicerWindow.h  VolumeSlicerWindow.ui
src/apps/VolumeSlicer/cmake/: OpenCL.cmake
src/apps/clFVR/: CMakeLists.txt  clFVR.cpp  clFVRWindow.cpp  clFVRWindow.h  clFVRWindow.ui
src/apps/cpuFVR/: CMakeLists.txt
src/common/: Headers.hh  Typedefs.hh
src/data/: ComplexImage.cpp  ComplexImage.h  ComplexImage.ipp  ComplexVolume.cpp  ComplexVolume.h  ComplexVolume.ipp  Image.cpp  Image.h  Image.ipp  Line.cpp  Line.h  Line.ipp  Volume.cpp  Volume.h  Volume.ipp  VolumeExporter.cpp  VolumeExporter.h  VolumeImporter.cpp  VolumeImporter.h
src/fft/: FFT.cpp  FFT.h  FFTShift.cpp  FFTShift.h
src/geometry/: Vector2.cpp  Vector2.h  Vector2.ipp  Vector3.cpp  Vector3.h  Vector3.ipp
src/rendering/: AbstractRenderer.cpp  AbstractRenderer.h
